# ImageClassifier

./: CLAUDE.md  NatsUI_v1.ui  NatsUI_v2.ui  README.md  README.txt  main.py  pyproject.toml  requirements.txt  week9notes.txt
NukeFIles/: imageClassifier.gizmo  init.py
UI/: ui.py
classifiers/: base_classifier.py  guassian_mixture.py  k_means.py  median_cut.py
imageClassifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
image_classifier/: color.py  controller.py  nuke.py  preferences.py
image_classifier/classifiers/: base_classifier.py  guassian_mixture.py  k_means.py  median_cut.py
image_classifier/color/: color.py
image_classifier/controllers/: controller.py
image_classifier/processing/: color_harmony.py  color_sorting.py  image_processor.py  utils.py
image_classifier/storage/: __init__.py  palette_storage.py
image_classifier/tests/: test_color_harmony.py
image_classifier/ui/: app.py  backgroundProccess.py  background_process.py  library_view.py  qtGUI.py  ui.py  welcome_dialog.py
palettes/: palettes.json
processing/: color_sorting.py  image_processor.py
