[project]
name = "imageClassifier"
description = ""
version = "0.0.1"
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.0,<2",
    "scikit-learn>=1.6,<2",
    "pillow>=11.1,<12",
    "opencv-python>=4.11,<5",
    "PySide2>=5.1,<6",
    "qt-material-icons>=0.2,<1",
    "qt-themes>=0.3,<1",
]

[project.scripts]
image-classifier = "image_classifier.ui.app:MainWindow"

[project.optional-dependencies]
dev = ["black"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["image_classifier"]

[black]
skip-string-normalization = true
